# MF

./: .gitignore  README.md
SPO_CourseWork/Notes/: ~$яснительная записка.docx  Лист задания.docx  Лист_задания.docx  Пояснительная записка.docx  Титульник.docx
SPO_CourseWork/Notes/Draw.io files/: Алгоритм открытия директорий.drawio  Алгоритм перебора файлов.drawio  Ведомость.drawio  Структурная схема программы.drawio
SPO_CourseWork/Notes/To_print/: To_print.rar
SPO_CourseWork/Notes/Вложения/: Листнинг.docx
SPO_CourseWork/Utility/: .gitignore  CMakeLists.txt  functions.cpp  functions.h  main.cpp  make_and_run.sh  my_app  structures.h  test2.html  test_launch.cpp  test_launch.h
SPO_CourseWork/Utility_C/: .gitignore  C  CMakeLists.txt  main.c  makefile
SPO_CourseWork/Utility_C/headers/: file_work.h  helpful_fun.h  parse_input.h  structures.h  testing.h
SPO_CourseWork/Utility_C/include/: file_work.h  hashing.h  structures.h
SPO_CourseWork/Utility_C/src/: file_work.c  hashing.c  helpful_fun.c  parse_input.c  testing.c
